--- a/learn-create-share/src/styles/NavBar.css
+++ b/learn-create-share/src/styles/NavBar.css
@@ -1,87 +1,11 @@
 .navbar {
-    display: flex;
-    flex-direction: row;
-    background-color: #15124c;
-    color: white;
+    background-color: #8DC1FF;
+}
+.navbar-brand, .nav-link {
+    color: black;
 }
 
-.navbar .leftSide {
-    flex: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
+.navContent {
+    margin-left: 3%;
+    margin-right: 3%;
 }
-
-.navbar .rightSide {
-    flex: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.navbar .rightSide a {
-    padding: 20px;
-    margin-left: 5px;
-}
-
-.navbar .leftSide a {
-    padding: 20px;
-    margin-right: 5px;
-}
-
-.logoImage {
-    margin-left: 5px;
-    margin-right: 5PX;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-}
-
-.navbar .rightSide svg {
-    display: inherit;
-    font-size: 30px;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: white;
-}
-
-/* @media only screen and (max-width: 900px) {
-    .navbar .rightSide a {
-        width: 70px;
-    }
-
-    .navbar .leftSide {
-        padding: 20px;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .navbar .rightSide a {
-        display: none;
-    }
-
-    .navbar .rightSide {
-        justify-content: flex-end;
-        padding: 10px;
-    }
-
-    .navbar .leftSide {
-        align-items: center;
-        justify-content: flex-start;
-        padding: 10px;
-    }
-}
-
-@media only screen and (min-width: 600px) {
-
-    .navbar .rightSide {
-        justify-content: flex-end;
-        padding: 10px;
-    }
-} */
