Layout and components added. CSS started

--- a/learn-create-share/src/styles/NavBar.css
+++ b/learn-create-share/src/styles/NavBar.css
@@ -4,10 +4,18 @@
 .navbar-brand{
     font-weight: 400;
 }
+
+.logo {
+    margin-right: 3%;
+}
     
 .nav-link {
     font-weight: 350;
     color: black;
+}
+
+.navbtn {
+    text-decoration: underline;
 }
 
 
