--- a/learn-create-share/src/styles/Footer.css
+++ b/learn-create-share/src/styles/Footer.css
@@ -2,12 +2,12 @@
     background-color: #8DC1FF;
     color: black;
     text-align: center;
+    padding: 1%;
+    font-weight: 350;
 }
 
-.footer h3{
-    margin: 5px;
+.footer h5 {
+    font-weight: 400;
+    margin-bottom: 0px;
 }
 
-.footer p {
-    margin: 5px;
-}
