added homepage and made footer stick to bottom of the page

--- a/learn-create-share/src/styles/Footer.css
+++ b/learn-create-share/src/styles/Footer.css
@@ -4,6 +4,11 @@
     text-align: center;
     padding: 1%;
     font-weight: 350;
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
+    
 }
 
 .footer h5 {
