--- a/learn-create-share/src/styles/Details.css
+++ b/learn-create-share/src/styles/Details.css
@@ -6,7 +6,6 @@
     grid-template-columns: 1fr 3fr;
     align-items: start;
     height: auto;
-    background-color: #558AFF;
     grid-column-gap: 10px;
     grid-row-gap: 15px;
     min-height: 100vh;
@@ -18,7 +17,7 @@
 .Details-side-navbar {
     display: grid;
     grid-template-rows: auto 1fr;
-    background-color: #8DC1FF;
+    background-color: #8BB8E8;
     margin: 10px;
     display: flex;
     flex-direction: column;
