--- a/learn-create-share/src/styles/Footer.css
+++ b/learn-create-share/src/styles/Footer.css
@@ -2,16 +2,19 @@
     background-color: #8DC1FF;
     color: black;
     text-align: center;
-    padding: 10px;
-    font-weight: 150;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 1%;
+    font-weight: 350;
     position: fixed;
     left: 0;
     bottom: 0;
     right: 0;
 }
 
+
 .footer h5 {
-    font-weight: 200;
+    font-weight: 350;
     margin-bottom: 0px;
 }
+
+
+
