--- a/learn-create-share/src/styles/Details.css
+++ b/learn-create-share/src/styles/Details.css
@@ -10,24 +10,27 @@
     grid-row-gap: 15px;
     min-height: 100vh;
     overflow: hidden;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10%;
+   
 }
 
 /* Styles for the side navigation bar within the user information page */
 .Details-side-navbar {
     display: grid;
     grid-template-rows: auto 1fr;
-    background-color: #8BB8E8;
-    margin: 10px;
+    background-color: white;
+    margin-top: 10%;
     display: flex;
     flex-direction: column;
     height: calc(100% - 20px);
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 /* Styles for individual items within the side navigation bar */
 .info-item {
-    border: 1px solid white;
+    border: 1px solid black;
     text-align: center;
     margin-bottom: 10px;
     border-radius: 5px;
@@ -76,11 +79,11 @@
 }
 
 /* Media query for responsiveness: adjusting layout for screens with max-width of 768px */
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
     .user-information-page {
         grid-template-columns: 1fr;
     }
-}
+}*/
 
 /* Styles for the button at the end of the user information section */
 .Details-end {
